Doctor And Shift Rep

--- a/Clinic/Views/Shared/Layout/MainLayout.cshtml
+++ b/Clinic/Views/Shared/Layout/MainLayout.cshtml
@@ -211,7 +211,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a asp-controller="Department" asp-action="GetAll" class="nav-link">
+                                    <a asp-controller="Department" asp-action="GetAllDepartments" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Get All</p>
                                     </a>
