Shift Crud Padges

--- a/Clinic/Views/Shift/Edit.cshtml
+++ b/Clinic/Views/Shift/Edit.cshtml
@@ -1,7 +1,6 @@
-﻿@model BLL.Models.DepartmentViewModel
-
+﻿@model BLL.Models.ShiftViewModel
 @{
-    ViewBag.Title = "Edit Departement";
+    ViewBag.Title = "Edit Shift";
 }
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -9,10 +8,10 @@
 
 <script>
     if (@ViewBag.Success == 1) {
-        swal("Edited Success!", "You clicked the button!", "success").then(function () {
+        swal("Shift Edited Successfully!", "You clicked the button!", "success").then(function () {
             $(".A input").val("");
         }).then(function () {
-            window.location = "/Department/GetAllDepartments";
+            window.location = "/Shift/GetAll";
         });
     }
 </script>
@@ -22,12 +21,12 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Edit Department</h1>
+                <h1 class="m-0">Edit Shift</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item active">Edit Department</li>
+                    <li class="breadcrumb-item active">Edit</li>
                 </ol>
             </div><!-- /.col -->
         </div><!-- /.row -->
@@ -36,19 +35,28 @@
 <!-- Horizontal Form -->
 <div class="card card-info">
     <div class="card-header">
-        <h3 class="card-title">Edit Department</h3>
+        <h3 class="card-title">Edit Shift</h3>
     </div>
     <!-- /.card-header -->
     <!-- form start -->
-    <form class="form-horizontal" asp-controller="Department" asp-action="Edit">
-        <input type="hidden" value="@Model.DepartmentId" />
+    <form class="form-horizontal" asp-controller="Shift" asp-action="Edit">
         <div class="card-body">
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Start Shift</label>
                 <div class="col-sm-10">
-                    <input type="text" asp-for="Name" class="form-control" id="inputEmail3" placeholder="Enter department name" >
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <input value="@Model.StartShift.ToString("t")" data="@Model.StartShift.ToString("t")" type="datetime" asp-for="StartShift" class="form-control" id="inputEmail3" placeholder="Enter StartShift">
+                    <span asp-validation-for="StartShift" class="text-danger"></span>
                 </div>
+
+            </div>
+
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">End Shift</label>
+                <div class="col-sm-10">
+                    <input value="@Model.EndShift.ToString("t")" data="@Model.StartShift.ToString("t")" type="datetime" asp-for="EndShift" class="form-control" id="inputEmail3" placeholder="Enter EndShift">
+                    <span asp-validation-for="EndShift" class="text-danger"></span>
+                </div>
+
             </div>
         </div>
         <!-- /.card-body -->
@@ -57,7 +65,7 @@
             <button onclick="history.back()" class="btn btn-secondary">
                 <i class="fas fa-angle-double-left"></i> Back
             </button>
-            <button type="submit" class="btn btn-info">Edit</button>
+            <button type="submit" class="btn btn-info">Create</button>
         </div>
         <!-- /.card-footer -->
     </form>
