--- a/Clinic/Views/Shared/Layout/MainLayout.cshtml
+++ b/Clinic/Views/Shared/Layout/MainLayout.cshtml
@@ -267,6 +267,31 @@
                             </ul>
                         </li>
 
+                        <!--Patients-->
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <p>
+                                    Patients
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a asp-controller="Patient" asp-action="Create" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Create Patient</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a asp-controller="Patient" asp-action="GetAll" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Get All</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <!--Secretary-->
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
@@ -277,13 +302,13 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="pages/charts/chartjs.html" class="nav-link">
+                                    <a asp-controller="Appointment" asp-action="Create" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Create Appointment</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="pages/charts/flot.html" class="nav-link">
+                                    <a asp-controller="Appointment" asp-action="GetAll" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Get All</p>
                                     </a>
