--- a/Clinic/Views/Home/Index.cshtml
+++ b/Clinic/Views/Home/Index.cshtml
@@ -4,16 +4,31 @@
 
 }
 
+@inject BLL.Interface.IDashboardRep dash
+
 <div class="container-fluid">
     <!-- Small boxes (Stat box) -->
     <div class="row">
         <div class="col-lg-3 col-6">
             <!-- small box -->
+            <div class="small-box bg-danger">
+                <div class="inner">
+                    <h3>@dash.NumberOfDepartments()</h3>
+
+                    <p>NumberOfDepartments</p>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-pie-graph"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+        <div class="col-lg-3 col-6">
+            <!-- NumberOfAppointments -->
             <div class="small-box bg-info">
                 <div class="inner">
-                    <h3>150</h3>
-
-                    <p>New Orders</p>
+                    <h3>@dash.NumberOfAppointments()</h3>
+                    <p>NumberOfAppointments</p>
                 </div>
                 <div class="icon">
                     <i class="ion ion-bag"></i>
@@ -23,27 +38,12 @@
         </div>
         <!-- ./col -->
         <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-success">
-                <div class="inner">
-                    <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                    <p>Bounce Rate</p>
-                </div>
-                <div class="icon">
-                    <i class="ion ion-stats-bars"></i>
-                </div>
-                <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-6">
-            <!-- small box -->
+            <!-- NumberOfDoctors -->
             <div class="small-box bg-warning">
                 <div class="inner">
-                    <h3>44</h3>
+                    <h3>@dash.NumberOfDoctors()</h3>
 
-                    <p>User Registrations</p>
+                    <p>NumberOfDoctors</p>
                 </div>
                 <div class="icon">
                     <i class="ion ion-person-add"></i>
@@ -51,22 +51,21 @@
                 <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
         </div>
-        <!-- ./col -->
         <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-danger">
+            <!-- NumberOfPatients -->
+            <div class="small-box bg-success">
                 <div class="inner">
-                    <h3>65</h3>
+                    <h3>@dash.NumberOfPatients()</h3>
 
-                    <p>Unique Visitors</p>
+                    <p>NumberOfPatients</p>
                 </div>
                 <div class="icon">
-                    <i class="ion ion-pie-graph"></i>
+                    <i class="ion ion-person-add"></i>
                 </div>
                 <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
         </div>
-        <!-- ./col -->
+
     </div>
 
 </div><!-- /.container-fluid -->
