Appointments Create and Get All

--- a/Clinic/Views/Shared/Layout/MainLayout.cshtml
+++ b/Clinic/Views/Shared/Layout/MainLayout.cshtml
@@ -308,7 +308,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a asp-controller="Appointment" asp-action="GetAll" class="nav-link">
+                                    <a asp-controller="Appointment" asp-action="GetAllAppointments" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Get All</p>
                                     </a>
