--- a/Clinic/Views/Appointment/Create.cshtml
+++ b/Clinic/Views/Appointment/Create.cshtml
@@ -68,10 +68,17 @@
             </div>
             <!--Date-->
             <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">DateAndTime</label>
+               @* <label for="inputEmail3" class="col-sm-2 col-form-label">DateAndTime</label>
                 <div class="col-sm-10">
-                    <input type="date" asp-for="DateAndTime" class="form-control" id="inputEmail3" placeholder="Enter DateAndTime">
+                    <input type="datetime" asp-for="DateAndTime" class="form-control" id="inputEmail3" placeholder="Enter DateAndTime">
                     <span asp-validation-for="DateAndTime" class="text-danger"></span>
+                </div>*@
+                <label for="inputEmail3" class="col-sm-2 col-form-label">DateAndTime</label>
+                <div class="input-group date col-sm-10" id="reservationdatetime" data-target-input="nearest">
+                    <input asp-for="DateAndTime" type="text" class="form-control datetimepicker-input" data-target="#reservationdatetime" placeholder="Enter Date And Time"/>
+                    <div class="input-group-append" data-target="#reservationdatetime" data-toggle="datetimepicker">
+                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                    </div>
                 </div>
                 <span class="text-danger" asp-validation-for="DoctorId"></span>
             </div>
