--- a/Clinic/Views/Shared/Layout/MainLayout.cshtml
+++ b/Clinic/Views/Shared/Layout/MainLayout.cshtml
@@ -80,7 +80,7 @@
                         <a href="#" class="dropdown-item">
                             <!-- Message Start -->
                             <div class="media">
-                                <img src="~/dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                                <img src="~/dist/img/MohammedSallam.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
                                 <div class="media-body">
                                     <h3 class="dropdown-item-title">
                                         Mohammed Sallam
@@ -96,7 +96,7 @@
                         <a href="#" class="dropdown-item">
                             <!-- Message Start -->
                             <div class="media">
-                                <img src="dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+                                <img src="dist/img/MohammedSallam.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
                                 <div class="media-body">
                                     <h3 class="dropdown-item-title">
                                         Mohammed Sallam
@@ -162,8 +162,8 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="index3.html" class="brand-link">
-                <img src="~/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+            <a asp-controller="Home" asp-action="index" class="brand-link">
+                <img src="~/dist/img/healthlogo.jpg" alt="Clinic Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">Clinic</span>
             </a>
 
@@ -310,7 +310,7 @@
                                 <li class="nav-item">
                                     <a asp-controller="Appointment" asp-action="GetAllAppointments" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Get All</p>
+                                        <p>Get All Appointments</p>
                                     </a>
                                 </li>
                             </ul>
