--- a/Clinic/Views/Appointment/GetAllAppointments.cshtml
+++ b/Clinic/Views/Appointment/GetAllAppointments.cshtml
@@ -67,7 +67,7 @@
                     <p>20/10/22</p>
                     </th>*@
                         <td>
-                            <a class="btn btn-info" title="Edit" asp-action="Edit" asp-controller="Appointment" asp-route-id="@item.PatientId">
+                            <a class="btn btn-info" title="Accept" href="#" >
                                 Accept
                             </a>
                         </td>
