--- a/Clinic/Views/Patient/Details.cshtml
+++ b/Clinic/Views/Patient/Details.cshtml
@@ -39,7 +39,7 @@
 
                         <h3 class="profile-username text-center">@Model.Name</h3>
 
-                        <p class="text-muted text-center">@Model.Gender</p>
+                        <p class="text-muted text-center">Patient</p>
 
 
 
@@ -94,7 +94,7 @@
                 <div class="card">
                     <div class="card-header p-2">
                         <ul class="nav nav-pills">
-                            <li class="nav-item"><a class="nav-link active" href="#activity" data-toggle="tab">Appointments</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="#activity" data-toggle="tab">Treatments</a></li>
                         </ul>
                     </div><!-- /.card-header -->
                     <div class="card-body">
